Day 31/100 commits - Test end to end integration with redis and postgresql
